# phantom_engine

./: Cargo.toml
games/coinkeeper/: Cargo.toml
games/scratch_pad/: Cargo.toml
games/scratch_pad/src/: main.rs
phantom_assets/: Cargo.toml
phantom_assets/src/: lib.rs
phantom_assets/src/asset_manager/: asset_manager.rs  asset_types.rs  consts.rs  handle.rs  mod.rs  phantom_asset.rs
phantom_assets/src/texture_loader/: mod.rs  texture_loader.rs
phantom_assets/tests/: sidecar_smoke.rs
phantom_build/: Cargo.toml
phantom_build/src/: lib.rs
phantom_cli/: Cargo.toml
phantom_cli/src/: args.rs  main.rs
phantom_common/: Cargo.toml
phantom_common/src/dirs/: dirs.rs  mod.rs
phantom_core/: Cargo.toml
phantom_core/src/: lib.rs  serialization.rs
phantom_core/src/animation/: animation_system.rs  mod.rs
phantom_core/src/audio/: audio_context.rs  mod.rs
phantom_core/src/collision/: collision_system.rs  mod.rs
phantom_core/src/constants/: constants.rs  invalid.rs  mod.rs  version.rs
phantom_core/src/ecs/: any_storage.rs  component.rs  component_registry.rs  entity.rs  mod.rs  sparse_set.rs  world.rs  world_data.rs
phantom_core/src/ecs/components/: anchor.rs  animator.rs  camera.rs  collider.rs  mod.rs  name.rs  sprite.rs  transform.rs
phantom_core/src/input/: input.rs  input_context.rs  input_system.rs  mod.rs
phantom_core/src/reflecton/: asset_types.rs  fields.rs  mod.rs  reflection.rs
phantom_core/src/scripting/: context.rs  mod.rs  script.rs  script_context.rs  script_registry.rs  script_scheduler.rs  time.rs
phantom_core/src/time/: mod.rs  time_context.rs  time_system.rs
phantom_core/src/ui/: anchor_system.rs  mod.rs
phantom_editor/: Cargo.toml
phantom_editor/src/: main.rs  shortcuts.rs  top_bar.rs
phantom_editor/src/actions/: actions.rs  command.rs  mod.rs
phantom_editor/src/actions/commands/: mod.rs  summon_entity.rs
phantom_editor/src/app/: editor_app.rs  mod.rs  tab_viewer.rs
phantom_editor/src/context/: editor_context.rs  mod.rs  panel_context.rs
phantom_editor/src/defaults/: default_level_editor.json
phantom_editor/src/dock/: dock_manager.rs  mod.rs  workspace_presets.rs
phantom_editor/src/egui/: egui_renderer.rs  mod.rs
phantom_editor/src/logger/: log_entry.rs  logger.rs  mod.rs
phantom_editor/src/menus/: file.rs  mod.rs  view.rs
phantom_editor/src/panels/: asset_browser.rs  asset_browser_panel.rs  asset_browser_state.rs  console.rs  field_wigets.rs  hierarchy.rs  inspector.rs  mod.rs  panel_viewer.rs  panels.rs  viewport.rs  viewport_panel.rs  viewport_state.rs
phantom_editor/src/panels/asset_browser/: asset_browser_crud.rs  asset_browser_panel.rs  asset_browser_state.rs  file_button.rs  mod.rs
phantom_editor/src/persitance/: layout.rs
phantom_editor/src/project_manager/: project_manager.rs
phantom_editor/src/render_resoruces/: mod.rs  render_recource_keys.rs
phantom_editor/src/resources/: mod.rs  resource_keys.rs
phantom_editor/src/theme/: editor_theme.rs  mod.rs
phantom_editor/src/workspaces/: builtin_workspaces.rs  mod.rs  workspace.rs  workspace_config.rs  workspace_descriptor.rs  workspace_kind.rs  workspace_viewer.rs
phantom_editor/templates/: component.template  script.template
phantom_macros/: Cargo.toml
phantom_macros/src/: lib.rs
phantom_player/: Cargo.toml
phantom_player/src/: main.rs
phantom_project/: Cargo.toml
phantom_project/src/: create.rs  lib.rs  phantom_project.rs
phantom_project/src/project_manager/: project_manager.rs
phantom_runtime/: Cargo.toml
phantom_runtime/src/: lib.rs  main.rs
phantom_runtime/src/app/: app.rs
phantom_runtime/src/asset_manager/: asset_manager.rs  mod.rs
phantom_runtime/src/asset_manager/asset_types/: texture.rs
phantom_runtime/src/audio/: audio_system.rs  mod.rs
phantom_runtime/src/game_loader/: game_loader.rs  mod.rs
phantom_runtime/src/renderer/: example_object.rs  mod.rs  scene_renderer.rs  state.rs  vertex.rs
phantom_runtime/src/renderer/shaders/: sprite_shader.wgsl  triangle.wgsl
