[package]
name = "phantom_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_core = { workspace = true }

anyhow     =   { workspace = true }
image      =   { workspace = true }
log        =   { workspace = true }
serde      =   { workspace = true }
serde_json =   { workspace = true }
uuid       =   { workspace = true }
