[package]
name = "phantom_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_common  = { workspace = true }
phantom_project = { workspace = true }
clap            = { workspace = true }
anyhow          = { workspace = true }
directories     = { workspace = true }

[[bin]]
name = "phantom"
path = "src/main.rs"
