[package]
name = "phantom_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
phantom_macros = { path = "../phantom_macros"}
glam = { version = "0.32.1", features = ["serde"] }
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ctor = "0.10.1"
