[package]
name = "phantom_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
phantom_macros = { workspace = true }
glam           = { workspace = true }
directories    = { workspace = true }
log            = { workspace = true }
serde          = { workspace = true }
bincode        = { workspace = true }
serde_json     = { workspace = true }
ctor           = { workspace = true }
winit          = { workspace = true }
