[package]
name = "phantom_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_core = { path = "../phantom_core"}
phantom_project = { path = "../phantom_project"}
phantom_common = { path = "../phantom_common"}
phantom_runtime = { path = "../phantom_runtime" }
phantom_build = { workspace = true }
glam = { version = "0.32.1", features = ["serde"] }
anyhow = "1.0.102"
image = { version = "0.25", default-features = false, features = ["png"] }
egui_extras = { version = "0.34.1", features = ["image"] }
egui = { version = "0.34.1", features = ["default"] }
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
winit = "0.30"
log = "0.4.29"
env_logger = "0.11.10"
pollster = "0.3"
egui_dock = { version = "0.19.1", features = ["serde"] }
serde_json = "1.0.149"
serde = "1.0.228"
bincode = "1.3"
parking_lot = "0.12.5"
