[package]
name = "phantom_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_core    = { workspace = true }
phantom_project = { workspace = true }
phantom_common  = { workspace = true }
phantom_runtime = { workspace = true }
phantom_build   = { workspace = true }
glam            = { workspace = true }
anyhow          = { workspace = true }
image           = { workspace = true, features = ["png"] }
egui_extras     = { workspace = true }
egui            = { workspace = true }
egui-wgpu       = { workspace = true }
egui-winit      = { workspace = true }
winit           = { workspace = true }
libloading      = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
pollster        = { workspace = true }
egui_dock       = { workspace = true }
serde_json      = { workspace = true }
serde           = { workspace = true }
bincode         = { workspace = true }
parking_lot     = { workspace = true }
