[package]
name = "phantom_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_core = { workspace = true }
phantom_common = { workspace = true }
anyhow = "1.0.102"
bincode = { workspace = true }
env_logger = "0.11.10"
log = "0.4.29"
winit = "0.30"
wgpu = "29.0"
pollster = "0.3"
image = { version = "0.25.10", features = ["png", "jpeg"] }
bytemuck = "1.25.0"
glam = { version = "0.32.1", features = ["serde"] }
