[package]
name = "phantom_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
phantom_core   = { workspace = true }
phantom_common = { workspace = true }
anyhow         = { workspace = true }
bincode        = { workspace = true }
env_logger     = { workspace = true }
libloading     = { workspace = true }
log            = { workspace = true }
rodio          = { workspace = true }
winit          = { workspace = true }
wgpu           = { workspace = true }
pollster       = { workspace = true }
image          = { workspace = true }
bytemuck       = { workspace = true }
glam           = { workspace = true }
